# mysysenv

./: .gitignore  README.md  pyproject.toml
docs/: 1. 需求分析文档.md  10. 代码规范手册.md  11. 开发环境搭建指南.md  12. 部署手册.md  13. 用户操作手册.md  14. 版本发布日志.md  2. 需求规格说明书.md  3. 需求列表.md  4. 原型图.md  5. 技术选型方案.md  6. 概要设计说明书.md  7. 详细设计说明书.md  8. 数据库设计文档.md  9. 接口文档.md
src/: __init__.py  cli.py  main.py
src/core/: __init__.py  config_manager.py  download_manager.py  env_manager.py  interfaces.py  local_manager.py  remote_fetcher.py  version_manager.py  version_utils.py
src/ui/: __init__.py  backend.py
src/ui/qml/: AddToolDialog.qml  ConfigPanel.qml  DeleteToolDialog.qml  DeleteVersionDialog.qml  Main.qml  ResetConfigDialog.qml  Sidebar.qml  Theme.qml  VersionPanel.qml  __init__.py
src/ui/viewmodels/: __init__.py  async_task_manager.py  config_data_provider.py  logger_bridge.py  tool_data_provider.py
src/utils/: __init__.py  download_history.py  input_validator.py  logger.py  permission_manager.py  rate_limiter.py  retry.py  speed_limiter.py
